syntax = "proto3";
package common.service;
option go_package = "github.com/ZRothschild/ldp/gen/common";

import "google/api/annotations.proto";
import "google/protobuf/any.proto";

enum ErrorShowType {
  SILENT = 0;
  WARN_MESSAGE = 1;
  ERROR_MESSAGE = 2;
  NOTIFICATION = 3;
  REDIRECT = 9;
}


message CommonResp {
  bool success = 1;
  int64 errorCode = 2;
  string errorMessage = 3;
  google.protobuf.Any data = 4;
  ErrorShowType showType = 5;
}
